Correção no config.php, alteracao do arquivo de funcoes.php e no arquivo .cfg
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2016_10;C7410

--- a/ayllosdev/includes/config.cfg
+++ b/ayllosdev/includes/config.cfg
@@ -1,11 +1,12 @@
 ; Fonte: config.cfg                                                
 ; Autor: Carlos Rafael Tanholi                                                    
-; Data : Setembro/2016                   Ultima Alteracao: 
+; Data : Setembro/2016                   Ultima Alteracao: 29/09/2016
 ; Ambiente  : PKGDESEN                                                                  
 ; Objetivo  : Centralizar as configuracoes do Ayllos agrupadas por servidor e segregadas por tipo.
 ;             Qualquer atualizacao deve ser replicada para todos os servidores.
-; Alteracoes: 
-
+;
+; Alteracoes: 29/09/2016 - Removi os indices (URL_SITE, URL_IMAGENS) utilizados pelo config.php, no lugar
+;						   sera utilizada o array $_SERVER com o indice 'SERVER_NAME'. Carlos Rafael Tanholi.
 
 
 ;;;;;;;;;;;;;;;; D E S E N V O L V I M E N T O ;;;;;;;;;;;;;;;;;;;;;;
@@ -17,8 +18,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixadev1.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllosdev1.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllosdev1.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetdev1.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -45,8 +44,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS<br>DESENVOLVIMENTO'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixadev2.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllosdev2.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllosdev2.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetdev2.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -74,8 +71,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - DEV3'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixadev3.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllosdev3.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllosdev3.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetdev3.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -105,8 +100,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixahomol1.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://aylloshomol1.cecred.coop.br/'
-URL_IMAGENS = 'http://aylloshomol1.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranethomol1.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -133,8 +126,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO 2'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixahomol2.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://aylloshomol2.cecred.coop.br/'
-URL_IMAGENS = 'http://aylloshomol2.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranethomol2.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -161,8 +152,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO 3'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixahomol3.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://aylloshomol3.cecred.coop.br/'
-URL_IMAGENS = 'http://aylloshomol3.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranethomol3.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -189,8 +178,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO 4'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixahomol4.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://aylloshomol4.cecred.coop.br/'
-URL_IMAGENS = 'http://aylloshomol4.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranethomol4.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -220,8 +207,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO 4'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixalibera1.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://aylloslibera1.cecred.coop.br/'
-URL_IMAGENS = 'http://aylloslibera1.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetlibera1.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -256,8 +241,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = '.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllos.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllos.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranet.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -287,8 +270,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS - QA1'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixaqa1.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllosqa1.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllosqa1.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetqa1.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -314,8 +295,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS '
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixaqa2.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllosqa2.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllosqa2.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetqa2.cecred.coop.br/login_sistemas.php'
 
 ; servidor
@@ -345,8 +324,6 @@ TITULO_LOGIN = 'SISTEMA AYLLOS<br>Treinamento'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixatreina.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
-URL_SITE = 'http://ayllostreina.cecred.coop.br/'
-URL_IMAGENS = 'http://ayllostreina.cecred.coop.br/imagens/'
 URL_LOGIN = 'http://intranetqa2.cecred.coop.br/login_sistemas_treina.php'
 
 ; servidor
