Correção de indices do ambiente de LIBERA.
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2016_10;C7694

--- a/ayllosdev/includes/config.cfg
+++ b/ayllosdev/includes/config.cfg
@@ -1,12 +1,14 @@
 ; Fonte: config.cfg                                                
 ; Autor: Carlos Rafael Tanholi                                                    
-; Data : Setembro/2016                   Ultima Alteracao: 29/09/2016
+; Data : Setembro/2016                   Ultima Alteracao: 19/10/2016
 ; Ambiente  : PKGDESEN                                                                  
 ; Objetivo  : Centralizar as configuracoes do Ayllos agrupadas por servidor e segregadas por tipo.
 ;             Qualquer atualizacao deve ser replicada para todos os servidores.
 ;
 ; Alteracoes: 29/09/2016 - Removi os indices (URL_SITE, URL_IMAGENS) utilizados pelo config.php, no lugar
 ;						   sera utilizada o array $_SERVER com o indice 'SERVER_NAME'. Carlos Rafael Tanholi.
+;
+;			  19/10/2016 - Corrigi os indices TITULO_SISTEMA, TITULO_LOGIN para o servidor de LIBERACAO. Carlos R. Tanholi.
 
 
 ;;;;;;;;;;;;;;;; D E S E N V O L V I M E N T O ;;;;;;;;;;;;;;;;;;;;;;
@@ -202,8 +204,8 @@ HOST_BD_CT = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0
 
 [0303lweb01]
 ; titulo
-TITULO_SISTEMA = ':: Sistema Ayllos - HOMOLOGACAO 4::'
-TITULO_LOGIN = 'SISTEMA AYLLOS - HOMOLOGACAO 4'
+TITULO_SISTEMA = ':: Sistema Ayllos - LIBERACAO::'
+TITULO_LOGIN = 'SISTEMA AYLLOS - LIBERACAO'
 
 ; url
 URL_WEBSPEED_AYLLOS_WEB = 'http://caixalibera1.cecred.coop.br/cgi-bin/cgiip.exe/WService=ws_ayllos/'
