Correções nas configurações
git-tfs-id: [http://alm.cecred.coop.br:8080/tfs/DefaultCollection]$/FONTES/2016_10;C7703

--- a/ayllosdev/includes/config.cfg
+++ b/ayllosdev/includes/config.cfg
@@ -1,6 +1,6 @@
 ; Fonte: config.cfg                                                
 ; Autor: Carlos Rafael Tanholi                                                    
-; Data : Setembro/2016                   Ultima Alteracao: 19/10/2016
+; Data : Setembro/2016                   Ultima Alteracao: 20/10/2016
 ; Ambiente  : PKGDESEN                                                                  
 ; Objetivo  : Centralizar as configuracoes do Ayllos agrupadas por servidor e segregadas por tipo.
 ;             Qualquer atualizacao deve ser replicada para todos os servidores.
@@ -9,6 +9,8 @@
 ;						   sera utilizada o array $_SERVER com o indice 'SERVER_NAME'. Carlos Rafael Tanholi.
 ;
 ;			  19/10/2016 - Corrigi os indices TITULO_SISTEMA, TITULO_LOGIN para o servidor de LIBERACAO. Carlos R. Tanholi.
+;
+;			  20/10/2016 - Correcao na chave de conexao com a base e URL de conexao do QA2. Carlos R. Tanholi.
 
 
 ;;;;;;;;;;;;;;;; D E S E N V O L V I M E N T O ;;;;;;;;;;;;;;;;;;;;;;
@@ -251,7 +253,7 @@ GED_SERVIDOR = 'ged.cecred.coop.br'
 
 ; acesso
 USERE = 'YXlsbG9z'
-PASSE = 'cHdkY2VjcmVkMjAxMg=='
+PASSE = 'cGFkc29sbHlhdXN1MjAxNQ=='
 
 ; criptografia
 KEY = '50983417512346753284723840854609576043576094576059437609'
@@ -312,8 +314,8 @@ KEY = '50983417512346753284723840854609576043576094576059437609'
 IV = '12345678'
 
 ; banco de dados (Sao Paulo | Curitiba)
-HOST_BD_SP = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302devora01)(PORT = 1521)) ) (CONNECT_DATA =(SERVICE_NAME = ayllosl) ))'
-HOST_BD_CT = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302devora01)(PORT = 1521)) ) (CONNECT_DATA =(SERVICE_NAME = ayllosl) ))'
+HOST_BD_SP = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302hmlora02)(PORT = 1521)) ) (CONNECT_DATA =(SERVICE_NAME = ayllosq2) ))'
+HOST_BD_CT = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302hmlora02)(PORT = 1521)) ) (CONNECT_DATA =(SERVICE_NAME = ayllosq2) ))'
 
 
 
