--- a/ayllosdev/includes/config.cfg
+++ b/ayllosdev/includes/config.cfg
@@ -59,8 +59,8 @@ KEY = '50983417512346753284723840854609576043576094576059437609'
 IV = '12345678'
 
 ; banco de dados (Sao Paulo | Curitiba)
-HOST_BD_SP = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302devora01)(PORT = 1521))) (CONNECT_DATA =(SERVICE_NAME = ayllosd) )  )'
-HOST_BD_CT = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302devora01)(PORT = 1521))) (CONNECT_DATA =(SERVICE_NAME = ayllosd) )  )'
+HOST_BD_SP = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302oradev01)(PORT = 1521))) (CONNECT_DATA =(SERVICE_NAME = ayllosd2) )  )'
+HOST_BD_CT = '(DESCRIPTION =(ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = 0302oradev01)(PORT = 1521))) (CONNECT_DATA =(SERVICE_NAME = ayllosd2) )  )'
 
 
 
